--- a/EgitimPlatformuAI/Views/ReadingScreen/ReadingScreen.storyboard
+++ b/EgitimPlatformuAI/Views/ReadingScreen/ReadingScreen.storyboard
@@ -134,6 +134,15 @@
                                     </view>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WGL-nP-DiI">
+                                <rect key="frame" x="196.66666666666666" y="69" width="0.0" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="pp4-hw-pIa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="summer"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ipu-xd-vvc" customClass="CustomBackButtonView" customModule="EgitimPlatformuAI" customModuleProvider="target">
                                 <rect key="frame" x="20" y="59" width="40" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -174,7 +183,9 @@
                         <color key="backgroundColor" name="darkBlue"/>
                         <constraints>
                             <constraint firstItem="CtN-zR-ZsB" firstAttribute="top" secondItem="0Ch-zo-uFi" secondAttribute="bottom" constant="10" id="1kF-Tb-3Vf"/>
+                            <constraint firstItem="WGL-nP-DiI" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="D5V-Jq-XuB"/>
                             <constraint firstItem="ENA-lG-739" firstAttribute="bottom" secondItem="5EZ-qb-Rvc" secondAttribute="bottom" id="FV2-ad-08Z"/>
+                            <constraint firstItem="WGL-nP-DiI" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="G4C-Cq-Tyu"/>
                             <constraint firstItem="CtN-zR-ZsB" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="II4-Am-VSd"/>
                             <constraint firstItem="ENA-lG-739" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="W3D-Yw-h5V"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0Ch-zo-uFi" secondAttribute="trailing" constant="16" id="aN4-LB-tco"/>
@@ -192,6 +203,7 @@
                         <outlet property="checkButton" destination="CtN-zR-ZsB" id="oRH-bk-8v1"/>
                         <outlet property="continueButton" destination="ENA-lG-739" id="7kF-1p-N5N"/>
                         <outlet property="passageLabel" destination="qGT-TG-VRA" id="nYR-Be-e4h"/>
+                        <outlet property="questionCount" destination="WGL-nP-DiI" id="x4c-lZ-VHO"/>
                         <outlet property="questionLabel" destination="TGQ-2m-l1I" id="c9z-i6-QEj"/>
                         <outlet property="tableView" destination="4bH-jg-GvT" id="DcK-yk-Eq0"/>
                     </connections>
@@ -208,8 +220,11 @@
         <namedColor name="porcelain">
             <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="summer">
+            <color red="0.94117647058823528" green="0.73333333333333328" blue="0.47058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
