--- a/EgitimPlatformuAI/Views/WritingScreen/WritingScreen.storyboard
+++ b/EgitimPlatformuAI/Views/WritingScreen/WritingScreen.storyboard
@@ -161,10 +161,20 @@
                                                             <constraint firstAttribute="height" constant="150" id="QkG-up-ETz"/>
                                                         </constraints>
                                                     </view>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="euP-we-Ccb">
+                                                        <rect key="frame" x="196.66666666666666" y="10" width="0.0" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="30" id="KbF-Lc-lDi"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <color key="textColor" name="summer"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
                                                 </subviews>
                                                 <color key="backgroundColor" name="backDarkBlue"/>
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="A65-Ey-Ief" secondAttribute="bottom" id="2xr-9Q-0aQ"/>
+                                                    <constraint firstItem="euP-we-Ccb" firstAttribute="top" secondItem="aLL-i7-V7P" secondAttribute="top" constant="10" id="4kb-Pn-vWk"/>
                                                     <constraint firstItem="Cs3-x1-3nS" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" id="8Ha-fV-Lrp"/>
                                                     <constraint firstItem="1Od-JH-yLa" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" constant="20" id="969-KN-sBV"/>
                                                     <constraint firstAttribute="trailing" secondItem="Cs3-x1-3nS" secondAttribute="trailing" id="Gbn-r2-9kZ"/>
@@ -178,6 +188,7 @@
                                                     <constraint firstItem="R9a-sv-Phs" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" constant="15" id="j6A-LL-xmt"/>
                                                     <constraint firstAttribute="trailing" secondItem="A65-Ey-Ief" secondAttribute="trailing" constant="30" id="oBO-8S-0Bc"/>
                                                     <constraint firstItem="1Od-JH-yLa" firstAttribute="top" secondItem="aLL-i7-V7P" secondAttribute="top" id="s28-Qm-ibP"/>
+                                                    <constraint firstItem="euP-we-Ccb" firstAttribute="centerX" secondItem="aLL-i7-V7P" secondAttribute="centerX" id="uR6-3k-1qD"/>
                                                     <constraint firstItem="ihm-Em-Oin" firstAttribute="leading" secondItem="aLL-i7-V7P" secondAttribute="leading" id="vYI-cO-dDS"/>
                                                 </constraints>
                                             </view>
@@ -218,6 +229,7 @@
                         <outlet property="continueButton" destination="ihm-Em-Oin" id="S14-JH-B8A"/>
                         <outlet property="exampleLabel" destination="xDl-UN-5LX" id="rNr-Mu-Yoi"/>
                         <outlet property="exampleLabelView" destination="hSq-mE-jQg" id="dzi-LZ-mYN"/>
+                        <outlet property="questionCount" destination="euP-we-Ccb" id="NaX-n5-ymv"/>
                         <outlet property="scrollView" destination="f1R-cf-qpm" id="v6x-ee-wSP"/>
                         <outlet property="translatedLabelView" destination="9W9-bo-gFU" id="Kag-to-PRi"/>
                         <outlet property="translatedText" destination="uOg-wG-fBb" id="hEr-XY-GF4"/>
@@ -238,8 +250,11 @@
         <namedColor name="porcelain">
             <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="summer">
+            <color red="0.94117647058823528" green="0.73333333333333328" blue="0.47058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemGreenColor">
-            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
