--- a/EgitimPlatformuAI/Views/ProfileScreen/LessonInfoTableViewCellNib/LessonInfoTableViewCell.xib
+++ b/EgitimPlatformuAI/Views/ProfileScreen/LessonInfoTableViewCellNib/LessonInfoTableViewCell.xib
@@ -3,8 +3,8 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -33,7 +33,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="softBlue"/>
                         <constraints>
                             <constraint firstItem="79Y-96-XFA" firstAttribute="centerY" secondItem="ouq-3t-l3k" secondAttribute="centerY" id="NON-J5-Qo3"/>
                             <constraint firstItem="Dg9-Oi-AkL" firstAttribute="centerY" secondItem="ouq-3t-l3k" secondAttribute="centerY" id="SwN-61-4FC"/>
@@ -66,8 +66,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="softBlue">
+            <color red="0.8901960784313725" green="0.94901960784313721" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
